= New Features =

== 1.20 release (in-progress) == #release-1.20

=== Library ===

==== Major changes ====

==== New classes ====
 * IndependentCopulaFactory
 * FieldToPointFunctionalChaosAlgorithm
 * FieldFunctionalChaosResult
 * FieldFunctionalChaosSobolIndices

==== API changes ====
 * Removed coupling_tools.execute get_stderr,get_stdout arguments
 * Removed deprecated Nlopt|Ceres|Bonmin|CMinpack|Ipopt|TBB|HMatrixFactory::IsAvailable methods
 * Deprecated SequentialStrategy
 * Deprecated TensorApproximationAlgorithm, TensorApproximationResult, CanonicalTensorEvaluation, CanonicalTensorGradient
 * Deprecated FunctionalChaosSobolIndices.getSobolGrouped(Total)Index(int)

=== Documentation ===

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===


== 1.19 release (2022-05-10) == #release-1.19

=== Library ===

==== Major changes ====
 * HSIC sensitivity indices
 * RandomWalkMetropolisHastings now updates all components at a time, previously updated componentwise
 * Iterative statistics

==== New classes ====
 * RandomVectorMetropolisHastings
 * IndependentMetropolisHastings
 * Gibbs
 * HSICEstimatorConditionalSensitivity
 * HSICEstimatorGlobalSensitivity
 * HSICEstimatorTargetSensitivity
 * HSICUStat
 * HSICVStat
 * IterativeExtrema
 * IterativeMoments
 * IterativeThresholdExceedance
 * TensorProductExperiment
 * NAIS
 * Pagmo
 * GalambosCopula

==== API changes ====
 * Removed deprecated Hanning alias
 * Removed deprecated AdaptiveDirectionalSampling alias
 * Removed deprecated VisualTest::DrawCobWeb method
 * Removed deprecated shims module
 * Removed deprecated TBB.SetNumberOfThreads/GetNumberOfThreads
 * Removed deprecated MultiFORM.setMaximumNumberOfDesignPoints/getMaximumNumberOfDesignPoints
 * Removed deprecated SubsetSampling.getNumberOfSteps
 * coupling_tools.execute: deprecated get_stderr,get_stdout for capture_output, returns CompletedProcess