@@ -1,3 +1,4 @@
 Remove SequentialStrategy for 1.21
 Remove TensorApproximationAlgorithm, TensorApproximationResult, CanonicalTensorEvaluation, CanonicalTensorGradient for 1.21
 Remove FunctionalChaosSobolIndices.getSobolGrouped(Total)Index(int) for 1.21
+Drop deprecated static CorrelationAnalysis::PearsonCorrelation|SpearmanCorrelation|PCC|PRCC
